<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_stub"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_stub"
        android:textAlignment="center"
        android:textSize="32sp"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/Rc_Ohm"
            android:padding="10dp"/>


        <EditText
            android:id="@+id/Rc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="numberDecimal"/>
        <Spinner
            android:id="@+id/spinner_Rc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:entries="@array/spinnerOption"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/ZL_Ohm"
            android:textSize="20sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/ZL_Re"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:inputType="numberDecimal|numberSigned" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j"/>
        <EditText
            android:id="@+id/ZL_Im"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
        android:inputType="numberDecimal|numberSigned" />
        <Spinner
            android:id="@+id/spinner_ZL"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:entries="@array/spinnerOption"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/lambda"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/lambda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:inputType="numberDecimal"/>
        <Spinner
            android:id="@+id/spinner_lambda"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:entries="@array/spinnerOption"
            android:spinnerMode="dropdown"/>
    </LinearLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="1">
        <RadioButton
            android:id="@+id/corto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shortCircuit"
            android:checked="true"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/openCircuit"
            android:layout_weight="1"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="35dp"
        android:text="@string/button_calc"
        android:onClick="calcola"
        style="@style/button_calc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/l1"
            android:textSize="24sp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/textview_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/l2"
            android:textSize="24sp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/textview_lstub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="20sp"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
